--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -8,6 +8,10 @@ ul, ol{
     list-style: none;
 }
 
+a{
+    text-decoration: none;
+}
+
 button{
     cursor: pointer;
     background: transparent;
