--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -1,4 +1,9 @@
 /* clamp(valorMinimo, valorDeReferencia (tento ficar sempre neste valor, valorMaximo) */
+/*
+display: block; //ocupa 100% do container
+inline: ocupa o tamanho do elemento respectivamente
+*/
+
 
 .title1{
     font-family: var(--font-primary);
@@ -41,4 +46,17 @@
     font-size: 1.1875rem;
     font-weight: 400;
     line-height: 1.4;
+    color: var(--color-black);
+}
+
+.paragraph strong{
+    font-weight: 700;
+}
+
+.paragraph.center{
+    text-align: center;
+}
+
+.paragraph.white{
+    color: var(--color-white);
 }
